--- a/src/pages/player/player.css
+++ b/src/pages/player/player.css
@@ -14,6 +14,8 @@ main {
   padding: 0;
   width: 100%;
   max-width: 840px;
+
+  outline: 2px solid green;
 }
 
 .title-box {
@@ -69,4 +71,12 @@ main {
 
 .search::placeholder {
   font-size: 2rem;
+}
+
+.btn-input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 120px;
+  padding: 24px 32px;
 }
