--- a/src/pages/player/player.css
+++ b/src/pages/player/player.css
@@ -1,4 +1,13 @@
 /* player section */
+#response-data {
+  display: none;
+  width: 50%;
+  margin-top: 2.4rem;
+  padding: 2.4rem;
+  border: 3px solid hsl(var(--clr-gold));
+  border-radius: 20px;
+  font-size: 1.6rem;
+}
 
 main {
   display: flex;
@@ -10,6 +19,7 @@ main {
   line-height: 32px;
   padding: 0 1.6rem;
   margin-bottom: 2.4rem;
+  width: 60%;
 }
 
 .search-container {
