--- a/src/styles.css
+++ b/src/styles.css
@@ -422,6 +422,17 @@ main {
   border-radius: 8px;
 }
 
+.flip-card-back h2 {
+  font-style: italic;
+  font-size: 3.2rem;
+  margin: 2rem 0;
+}
+
+.stats-info p {
+  font-size: 2rem;
+  padding-top: 1.4rem;
+}
+
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
